# ID

./: .gitignore  .pre-commit-config.yaml  Dockerfile-dev  docker-compose-dev.yml  people.sql  pyproject.toml  ruff.toml
SQL/: clear.sql  create.sql  create_all.sql  dump.sql  functions.sql  inserter.sh  merge.sh  recreate.sh  recreate.sql  triggers.sql  views.sql
SQL/FillTable/: administrators.sql  birth_certificates.sql  cities.sql  cities.txt  countries.sql  death_certificates.sql  divorce_certificates.sql  divorces.sql  document_types.sql  drivers_licences.sql  educational_certificates.sql  educational_certificates_types.sql  educational_certificetes_types.sql  educational_instances.sql  educational_instances_types.sql  educational_instances_types_relation.sql  international_passports.sql  main  marriage_certificates.sql  marriages.sql  names_generator.py  office_kinds_documents.sql  offices.sql  offices_kinds.sql  offices_kinds_relations.sql  passports.sql  people.sql  people_names.txt  pet_passports.sql  run.sh  script.cpp  visas.sql  (+1 more)
db/: __init__.py  accounts.py  administrators.py  config.py  educational_certificates.py  functions.py  international_passports.py  passports.py  people.py  visas.py
static/: create_table.js  documents.js  documents_lookup.html  documents_new.html  educational_certificates_view.html  helper.js  index.html  international_passports_view.html  login.html  office.html  passports_view.html  style.css  view_my_documents.html  visas_view.html
web/: authorization.py  config.py  documents.py  helper.py  jwt_helper.py  main.py  offices.py
(+12 files in other folders)
